fixed alignment of icons and added correct checkmark placement to DND option

--- a/components/global/global_header.scss
+++ b/components/global/global_header.scss
@@ -2,6 +2,7 @@
 
 // css feature flag: apply styling overrides to legacy layout when global header is enabled
 .feature-global-header {
+    background: red;
     --global-header-background: var(--sidebar-teambar-bg);
     --global-header-text: var(--sidebar-header-text-color);
     --global-header-background-rgb: var(--sidebar-teambar-bg-rgb);
@@ -204,7 +205,13 @@
 
             .MenuItem__primary-text {
                 display: grid;
-                grid-template-columns: auto 1fr auto;
+                grid-template-columns: auto 1fr auto auto;
+                align-items: center;
+
+                .SubMenu__icon-right {
+                    padding-top: 0;
+                    padding-left: 12px;
+                }
             }
 
             > .MenuItem__help-text {
